# yurki

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  build-wheels.sh  build.py  build.rs  pyproject.toml
.github/workflows/: ci.yml
scripts/: use-python-3.12.sh  use-python-3.13.sh  use-python-3.13t.sh
src/: converter.rs  core.rs  fast_string.rs  lib.rs  pylist.rs  pystring.rs  simd_string.rs  smid.rs  text.rs
src/object/: list.rs  mod.rs  simd.rs  string.rs
src/simd/: mod.rs  ucs1.rs  ucs2.rs  ucs4.rs
src/v2/: mod.rs
test/: test_stub.py
tests/: bench_find_regexp.py  bench_find_regexp_long.py  test_capture_regexp.py  test_copy_strings.py  test_find_regexp.py  test_is_match_regexp.py  test_replace_regexp.py  test_split_regexp.py  test_stub.py
yurki/: __init__.py  internal.pyi  yurki.pyi
yurki/regexp/: __init__.py
yurki/test/: __init__.py
