[package]
name = "yurki"
version = "0.1.0"
authors = ["Semyon Bessonov <aljutor@gmail.com>"]
edition = "2018"

[lib]
name = "yurki"
crate-type = ["cdylib"]

[dependencies]
rayon = "1.1"
crossbeam-channel = "0.4"
threadpool = "1.0"
regex = "1"
itertools = "0.7.6"
lazy_static = "1.4.0"
widestring = "*"
pyo3 = { version = "0.22.0", features = ["extension-module"] }
pyo3-ffi = "0.22.0"


[dev-dependencies]
rstest = "0.6.3"

[profile.release]
opt-level = 3
lto = "fat"
