[package]
name = "yurki"
version = "0.1.0"
authors = ["Semyon Bessonov <aljutor@gmail.com>"]
edition = "2024"

[lib]
name = "yurki"
crate-type = ["cdylib"]

[dependencies]
rayon = "1.10"
crossbeam-channel = "0.5"
threadpool = "1.8"
regex = "1.11"
itertools = "0.14"
bumpalo = { version = "3.14", features = ["collections"] }
pyo3 = { version = "0.25.1", features = ["extension-module"] }
pyo3-ffi = "0.25.1"
smallvec = "1.15.1"

[build-dependencies]
pyo3-build-config = "0.25.1"

[profile.release]
opt-level = 3
lto = "fat"

[profile.release-with-debug]
inherits = "release"
debug = true
