[tool.poetry]
name = "yurki"
license = "MIT"
version = "0.1.0"
description = "Fast NLP tools"

authors = ["Semyon Bessonov <aljutor@gmail.com>"]
readme = "README.md"

build = "build.py"
include = ["Cargo.toml", "src/*.rs"]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/Aljutor/yurki"

[tool.poetry.dependencies]
python = "^3.7 || ^3.8"
pandas = "^1.0.3"
scipy = "^1.4.1"
scikit-learn = "^0.23.0"

[tool.poetry.dev-dependencies]
setuptools_rust = "^0.10.6"
black = {version = "^19.10b0", allow-prereleases = true}
pytest = "^5.4.1"
pytest-cov = "^2.8.1"
tox = "^3.14.6"
mypy = "^0.770"
pre-commit = "^2.3.0"
isort = "^4.3.21"
flake8 = "^3.7.9"
pytest-benchmark = "^3.2.3"
jupyter = "^1.0.0"

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = true
envlist = py37, py38

[flake8]
max-line-length = 88
extend-ignore = E203

[testenv]
whitelist_externals = poetry
commands =
    poetry install -v
    poetry run pytest test/
"""

[build-system]
requires = ["poetry>=0.12", "setuptools", "wheel", "setuptools-rust"]
build-backend = "poetry.masonry.api"
