[project]
name = "yurki"
version = "0.1.0"
description = "Fast NLP tools"
authors = [
    {name = "Semyon Bessonov", email = "aljutor@gmail.com"},
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
    "setuptools-rust>=1.10.2",
]

[project.urls]
"Bug Tracker" = "https://github.com/Aljutor/yurki/issues"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
bindings = "pyo3"
manifest-path = "Cargo.toml"
module-name = "yurki"

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "pytest-benchmark[histogram]>=5.1.0",
    "ruff>=0.11.13",
]

[tool.ruff]
line-length = 119
exclude = ["**/*.ipynb"]

lint.ignore = ["E501", "C901", "F841"]
lint.select = ["C", "E", "F", "I", "W"]
lint.fixable = ["A", "B", "C", "D", "E", "F", "I", "W"]
preview = true

[tool.ruff.lint.isort]
length-sort = true
lines-after-imports = 2
no-lines-before = ["standard-library", "local-folder"]
known-local-folder = ["yurki"]
split-on-trailing-comma = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
