[project]
name = "yurki"
version = "0.1.0"
description = "Fast NLP tools"
authors = [
    {name = "Semyon Bessonov", email = "aljutor@gmail.com"},
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12,<4"
classifiers = [
    # Development Status
    "Development Status :: 3 - Alpha",
    
    # Intended Audience
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    
    # License
    "License :: OSI Approved :: MIT License",
    
    # Programming Languages
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Rust",
    
    # Topics
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing",
    "Topic :: Text Processing :: General",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Information Analysis",
    
    # Operating System - macOS and Linux only
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    
    # Performance
    "Topic :: System :: Distributed Computing",
]
dependencies = []

[project.urls]
"Bug Tracker" = "https://github.com/Aljutor/yurki/issues"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
bindings = "pyo3"
manifest-path = "Cargo.toml"
module-name = "yurki"

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "pytest-benchmark[histogram]>=5.1.0",
    "ruff>=0.11.13",
]

[tool.ruff]
line-length = 119
exclude = ["**/*.ipynb"]

lint.ignore = ["E501", "C901", "F841"]
lint.select = ["C", "E", "F", "I", "W"]
lint.fixable = ["A", "B", "C", "D", "E", "F", "I", "W"]
preview = true

[tool.ruff.lint.isort]
length-sort = true
lines-after-imports = 2
no-lines-before = ["standard-library", "local-folder"]
known-local-folder = ["yurki"]
split-on-trailing-comma = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
